@@ -10,6 +10,7 @@ Version 1.0-dev
 - added option to skip test if an extension is not loaded
 - deprecated Runner
 - added methods setUp and tearDown to TestCase which are called before/after each test method
+- version of My Tester and PHP is shown at start now
 
 Version 0.9.4c
 - fixed assertion same
